--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon app"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fawn": "^2.1.5",
     "joi": "^17.4.0",
+    "joi-objectid": "^3.0.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.11",
     "nodemon": "^2.0.7"
   }
