--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://adedotun:adedotun@cluster0.e9oju.mongodb.net/appdatabase?retryWrites=true&w=majority
+MONGO_URI="mongodb+srv://adedotun:adedotun@cluster0.e9oju.mongodb.net/appdatabase?retryWrites=true&w=majority"
